Update .gitignore, remove checkpoint files, add Hugging Face upload script

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
 data
 __pycache__
+
+*.ipynb
+*.pyc
+*.pth
+*.pt
+*.png
+*.jpg
+*.jpeg
+
+.env
+checkpoints/
+model_repo/
+downloaded_model/
+samples/
+
+# Virtual environment
+venv/
+.venv/
+
+# IDE files
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+
+
